WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194399
Fix more doesGC() for CheckTraps, GetMapBucket, and Switch nodes.
https://bugs.webkit.org/show_bug.cgi?id=194399
Summary
Fix more doesGC() for CheckTraps, GetMapBucket, and Switch nodes.
Mark Lam
Reported
2019-02-07 10:33:55 PST
CheckTraps, GetMapBucket, and Switch nodes can GC.
Attachments
proposed patch.
(6.92 KB, patch)
2019-02-07 11:09 PST
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-02-07 11:02:26 PST
<
rdar://problem/47889777
>
Mark Lam
Comment 2
2019-02-07 11:09:15 PST
Created
attachment 361420
[details]
proposed patch.
Yusuke Suzuki
Comment 3
2019-02-07 11:11:07 PST
Comment on
attachment 361420
[details]
proposed patch. r=me
Mark Lam
Comment 4
2019-02-07 12:20:52 PST
Thanks for the review. Landed in
r241140
: <
http://trac.webkit.org/r241140
>.
Michael Catanzaro
Comment 5
2019-02-12 13:17:30 PST
Note GCC doesn't like this: [1181/3497] Building CXX object Source...sources/UnifiedSource-bfc896e1-6.cpp.o In file included from DerivedSources/JavaScriptCore/unified-sources/UnifiedSource-bfc896e1-6.cpp:3: ../../Source/JavaScriptCore/dfg/DFGDoesGC.cpp: In function ‘bool JSC::DFG::doesGC(JSC::DFG::Graph&, JSC::DFG::Node*)’: ../../Source/JavaScriptCore/dfg/DFGDoesGC.cpp:464:9: warning: this statement may fall through [-Wimplicit-fallthrough=] switch (node->switchData()->kind) { ^~~~~~ ../../Source/JavaScriptCore/dfg/DFGDoesGC.cpp:479:5: note: here case LastNodeType: ^~~~ I'll also remove the two unreachable returns while I'm fixing this.
Michael Catanzaro
Comment 6
2019-02-12 13:17:51 PST
Committed
r241314
: <
https://trac.webkit.org/changeset/241314
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug